--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -4,4 +4,4 @@ tr:
   head_authorchange: "Şuanki Yazar "
   label_authorchange: "Yeni Yazar "
   label_authorchange_setlog: "Tarihçeye kayıt? "
-  label_authorchange_setlog_description: "Evet seçilirse bu değişikliğin kimin tarafından ne zaman yapıldığı için tarihçesine eklenir."
+  label_authorchange_setlog_description: "Evet seçilirse bu değişikliğin kimin tarafından ne zaman yapıldığı işin tarihçesine eklenir."
