--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,8 +1,8 @@
 # German locale strings go here for Rails i18n
 de:
   button_authorchange: "Autor ändern"
-  head_authorchange: "Ändere derzeitigen Autor in "
-  label_authorchange: "Autor von diesem Ticket ist "
+  head_authorchange: "Ändere derzeitigen Autor in:"
+  label_authorchange: "Autor von diesem Ticket ist:"
   label_authorchange_setlog: "Änderung in Issue-History loggen? "
   label_authorchange_setlog_description: "Alle Änderungen werden in der Bearbeitungshistorie des Tickets nachvollziehbar geloggt"
   permission_change_author: "Autor ändern"
